Common dev mode launcher API for Maven and Gradle