@@ -1,31 +1,18 @@
 package io.quarkus.gradle.tasks;
 
-import java.io.ByteArrayOutputStream;
-import java.io.DataOutputStream;
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.ObjectOutputStream;
-import java.net.InetAddress;
-import java.net.Socket;
-import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
-import java.util.jar.Attributes;
-import java.util.jar.Manifest;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipOutputStream;
 
 import javax.inject.Inject;
 
@@ -55,10 +42,9 @@ import io.quarkus.bootstrap.model.AppModel;
 import io.quarkus.bootstrap.resolver.AppModelResolver;
 import io.quarkus.bootstrap.resolver.AppModelResolverException;
 import io.quarkus.deployment.dev.DevModeContext;
-import io.quarkus.deployment.dev.DevModeMain;
+import io.quarkus.deployment.dev.QuarkusDevModeLauncher;
 import io.quarkus.gradle.QuarkusPluginExtension;
 import io.quarkus.runtime.LaunchMode;
-import io.quarkus.utilities.JavaBinFinder;
 
 public class QuarkusDev extends QuarkusTask {
 
@@ -194,205 +180,113 @@ public class QuarkusDev extends QuarkusTask {
                     "Does the project have any source files?");
         }
 
-        DevModeContext context = new DevModeContext();
-        context.setProjectDir(project.getProjectDir());
-        for (Map.Entry<Object, Object> e : System.getProperties().entrySet()) {
-            context.getSystemProperties().put(e.getKey().toString(), (String) e.getValue());
-        }
-        for (Map.Entry<String, ?> e : project.getProperties().entrySet()) {
-            if (e.getValue() instanceof String) {
-                context.getBuildSystemProperties().put(e.getKey(), e.getValue().toString());
-            }
-        }
-
-        //  this is a minor hack to allow ApplicationConfig to be populated with defaults
-        context.getBuildSystemProperties().putIfAbsent("quarkus.application.name", project.getName());
-        if (project.getVersion() != null) {
-            context.getBuildSystemProperties().putIfAbsent("quarkus.application.version", project.getVersion().toString());
-        }
-
-        context.setSourceEncoding(getSourceEncoding());
         try {
-            List<String> args = new ArrayList<>();
-            args.add(JavaBinFinder.findBin());
-            final String debug = System.getProperty("debug");
-            final String suspend = System.getProperty("suspend");
-            String debugSuspend = "n";
-            if (suspend != null) {
-                switch (suspend.toLowerCase(Locale.ENGLISH)) {
-                    case "n":
-                    case "false": {
-                        debugSuspend = "n";
-                        break;
-                    }
-                    case "":
-                    case "y":
-                    case "true": {
-                        debugSuspend = "y";
-                        break;
-                    }
-                    default: {
-                        System.err.println(
-                                "Ignoring invalid value \"" + suspend + "\" for \"suspend\" param and defaulting to \"n\"");
-                        break;
-                    }
-                }
-            }
-            if (debug == null) {
-                // debug mode not specified
-                // make sure 5005 is not used, we don't want to just fail if something else is using it
-                try (Socket socket = new Socket(InetAddress.getByAddress(new byte[] { 127, 0, 0, 1 }), 5005)) {
-                    System.err.println("Port 5005 in use, not starting in debug mode");
-                } catch (IOException e) {
-                    args.add("-Xdebug");
-                    args.add("-Xrunjdwp:transport=dt_socket,address=0.0.0.0:5005,server=y,suspend=" + debugSuspend);
-                }
-            } else if (debug.toLowerCase().equals("client")) {
-                args.add("-Xdebug");
-                args.add("-Xrunjdwp:transport=dt_socket,address=localhost:5005,server=n,suspend=" + debugSuspend);
-            } else if (debug.toLowerCase().equals("true") || debug.isEmpty()) {
-                args.add("-Xdebug");
-                args.add("-Xrunjdwp:transport=dt_socket,address=0.0.0.0:5005,server=y,suspend=" + debugSuspend);
-            } else if (!debug.toLowerCase().equals("false")) {
-                try {
-                    int port = Integer.parseInt(debug);
-                    if (port <= 0) {
-                        throw new GradleException("The specified debug port must be greater than 0");
-                    }
-                    args.add("-Xdebug");
-                    args.add("-Xrunjdwp:transport=dt_socket,address=0.0.0.0:" + port + ",server=y,suspend=" + debugSuspend);
-                } catch (NumberFormatException e) {
-                    throw new GradleException(
-                            "Invalid value for debug parameter: " + debug + " must be true|false|client|{port}");
-                }
-            }
-            if (getJvmArgs() != null) {
-                args.addAll(getJvmArgs());
-            }
-
-            // the following flags reduce startup time and are acceptable only for dev purposes
-            args.add("-XX:TieredStopAtLevel=1");
-            if (!isPreventnoverify()) {
-                args.add("-Xverify:none");
-            }
-
-            //build a class-path string for the base platform
-            //this stuff does not change
-            // Do not include URIs in the manifest, because some JVMs do not like that
-            StringBuilder classPathManifest = new StringBuilder();
-
-            final AppModel appModel;
-            final AppModelResolver modelResolver = extension().getAppModelResolver(LaunchMode.DEVELOPMENT);
-            try {
-                final AppArtifact appArtifact = extension.getAppArtifact();
-                appArtifact.setPaths(QuarkusGradleUtils.getOutputPaths(project));
-                appModel = modelResolver.resolveModel(appArtifact);
-            } catch (AppModelResolverException e) {
-                throw new GradleException("Failed to resolve application model " + extension.getAppArtifact() + " dependencies",
-                        e);
-            }
-
-            args.add("-Djava.util.logging.manager=org.jboss.logmanager.LogManager");
-
-            final Set<AppArtifactKey> projectDependencies = new HashSet<>();
-            addSelfWithLocalDeps(project, context, new HashSet<>(), projectDependencies, true);
-
-            for (AppDependency appDependency : appModel.getFullDeploymentDeps()) {
-                final AppArtifact appArtifact = appDependency.getArtifact();
-                if (!projectDependencies.contains(new AppArtifactKey(appArtifact.getGroupId(), appArtifact.getArtifactId()))) {
-                    appArtifact.getPaths().forEach(p -> {
-                        if (Files.exists(p)) {
-                            addToClassPaths(classPathManifest, p.toFile());
-                        }
-                    });
-                }
-            }
-
-            //we also want to add the maven plugin jar to the class path
-            //this allows us to just directly use classes, without messing around copying them
-            //to the runner jar
-            addGradlePluginDeps(classPathManifest, context);
-
-            context.setCacheDir(new File(getBuildDir(), "transformer-cache").getAbsoluteFile());
-
-            JavaPluginConvention javaPluginConvention = project.getConvention().findPlugin(JavaPluginConvention.class);
-            if (javaPluginConvention != null) {
-                context.setSourceJavaVersion(javaPluginConvention.getSourceCompatibility().toString());
-                context.setTargetJvmVersion(javaPluginConvention.getTargetCompatibility().toString());
-            }
-
-            if (getCompilerArgs().isEmpty()) {
-                getJavaCompileTask()
-                        .map(compileTask -> compileTask.getOptions().getCompilerArgs())
-                        .ifPresent(context::setCompilerOptions);
-            } else {
-                context.setCompilerOptions(getCompilerArgs());
-            }
-
-            // this is the jar file we will use to launch the dev mode main class
-            final File tempFile = new File(getBuildDir(), extension.finalName() + "-dev.jar");
-            tempFile.delete();
-            tempFile.deleteOnExit();
-
-            context.setDevModeRunnerJarFile(tempFile);
-            modifyDevModeContext(context);
-            try (ZipOutputStream out = new ZipOutputStream(new FileOutputStream(tempFile))) {
-                out.putNextEntry(new ZipEntry("META-INF/"));
-                Manifest manifest = new Manifest();
-                manifest.getMainAttributes().put(Attributes.Name.MANIFEST_VERSION, "1.0");
-                manifest.getMainAttributes().put(Attributes.Name.CLASS_PATH, classPathManifest.toString());
-                manifest.getMainAttributes().put(Attributes.Name.MAIN_CLASS, DevModeMain.class.getName());
-                out.putNextEntry(new ZipEntry("META-INF/MANIFEST.MF"));
-                manifest.write(out);
-
-                out.putNextEntry(new ZipEntry(DevModeMain.DEV_MODE_CONTEXT));
-                ByteArrayOutputStream bytes = new ByteArrayOutputStream();
-                try (ObjectOutputStream obj = new ObjectOutputStream(new DataOutputStream(bytes))) {
-                    obj.writeObject(context);
-                }
-                out.write(bytes.toByteArray());
-
-                out.putNextEntry(new ZipEntry(BootstrapConstants.SERIALIZED_APP_MODEL));
-                bytes = new ByteArrayOutputStream();
-                try (ObjectOutputStream obj = new ObjectOutputStream(new DataOutputStream(bytes))) {
-                    obj.writeObject(appModel);
-                }
-                out.write(bytes.toByteArray());
-            }
-
-            final Path serializedModel = QuarkusGradleUtils.serializeAppModel(appModel, this);
-            serializedModel.toFile().deleteOnExit();
-            args.add("-D" + BootstrapConstants.SERIALIZED_APP_MODEL + "=" + serializedModel.toAbsolutePath());
-
-            extension.outputDirectory().mkdirs();
-
-            if (context.isEnablePreview()) {
-                args.add(DevModeContext.ENABLE_PREVIEW_FLAG);
-            }
-
-            args.add("-jar");
-            args.add(tempFile.getAbsolutePath());
-            args.addAll(this.getArgs());
-            if (getLogger().isDebugEnabled()) {
-                getLogger().debug("Launching JVM with command line: {}", String.join(" ", args));
-            }
-
+            QuarkusDevModeLauncher runner = newLauncher();
             project.exec(action -> {
-                action.commandLine(args).workingDir(getWorkingDir());
+                action.commandLine(runner.args()).workingDir(getWorkingDir());
                 action.setStandardInput(System.in)
                         .setErrorOutput(System.out)
                         .setStandardOutput(System.out);
             });
+
         } catch (Exception e) {
             throw new GradleException("Failed to run", e);
         }
     }
 
-    protected void modifyDevModeContext(DevModeContext devModeContext) {
+    private QuarkusDevModeLauncher newLauncher() throws Exception {
+        final Project project = getProject();
+        GradleDevModeLauncher.Builder builder = GradleDevModeLauncher.builder(getLogger())
+                .preventnoverify(isPreventnoverify())
+                .projectDir(project.getProjectDir())
+                .buildDir(getBuildDir())
+                .outputDir(getBuildDir())
+                .debug(System.getProperty("debug"))
+                .suspend(System.getProperty("suspend"));
+
+        if (getJvmArgs() != null) {
+            builder.jvmArgs(getJvmArgs());
+        }
+
+        for (Map.Entry<String, ?> e : project.getProperties().entrySet()) {
+            if (e.getValue() instanceof String) {
+                builder.buildSystemProperty(e.getKey(), e.getValue().toString());
+            }
+        }
+
+        //  this is a minor hack to allow ApplicationConfig to be populated with defaults
+        builder.applicationName(project.getName());
+        if (project.getVersion() != null) {
+            builder.applicationVersion(project.getVersion().toString());
+
+        }
+
+        builder.sourceEncoding(getSourceEncoding());
+
+        final AppModel appModel;
+        final AppModelResolver modelResolver = extension().getAppModelResolver(LaunchMode.DEVELOPMENT);
+        try {
+            final AppArtifact appArtifact = extension().getAppArtifact();
+            appArtifact.setPaths(QuarkusGradleUtils.getOutputPaths(project));
+            appModel = modelResolver.resolveModel(appArtifact);
+        } catch (AppModelResolverException e) {
+            throw new GradleException("Failed to resolve application model " + extension().getAppArtifact() + " dependencies",
+                    e);
+        }
+
+        final Set<AppArtifactKey> projectDependencies = new HashSet<>();
+        addSelfWithLocalDeps(project, builder, new HashSet<>(), projectDependencies, true);
+
+        for (AppDependency appDependency : appModel.getFullDeploymentDeps()) {
+            final AppArtifact appArtifact = appDependency.getArtifact();
+            if (!projectDependencies.contains(new AppArtifactKey(appArtifact.getGroupId(), appArtifact.getArtifactId()))) {
+                appArtifact.getPaths().forEach(p -> {
+                    if (Files.exists(p)) {
+                        addToClassPaths(builder, p.toFile());
+                    }
+                });
+            }
+        }
+
+        //we also want to add the Gradle plugin to the class path
+        //this allows us to just directly use classes, without messing around copying them
+        //to the runner jar
+        addGradlePluginDeps(builder);
+
+        JavaPluginConvention javaPluginConvention = project.getConvention().findPlugin(JavaPluginConvention.class);
+        if (javaPluginConvention != null) {
+            builder.sourceJavaVersion(javaPluginConvention.getSourceCompatibility().toString());
+            builder.targetJavaVersion(javaPluginConvention.getTargetCompatibility().toString());
+        }
+
+        if (getCompilerArgs().isEmpty()) {
+            getJavaCompileTask()
+                    .map(compileTask -> compileTask.getOptions().getCompilerArgs())
+                    .ifPresent(builder::compilerOptions);
+        } else {
+            builder.compilerOptions(getCompilerArgs());
+        }
+
+        modifyDevModeContext(builder);
+
+        final Path serializedModel = QuarkusGradleUtils.serializeAppModel(appModel, this);
+        serializedModel.toFile().deleteOnExit();
+        builder.jvmArgs("-D" + BootstrapConstants.SERIALIZED_APP_MODEL + "=" + serializedModel.toAbsolutePath());
+
+        extension().outputDirectory().mkdirs();
+
+        if (!args.isEmpty()) {
+            builder.applicationArgs(String.join(" ", args));
+        }
+
+        return builder.build();
+    }
+
+    protected void modifyDevModeContext(GradleDevModeLauncher.Builder builder) {
 
     }
 
-    private void addSelfWithLocalDeps(Project project, DevModeContext context, Set<String> visited,
+    private void addSelfWithLocalDeps(Project project, GradleDevModeLauncher.Builder builder, Set<String> visited,
             Set<AppArtifactKey> addedDeps, boolean root) {
         if (!visited.add(project.getPath())) {
             return;
@@ -401,15 +295,16 @@ public class QuarkusDev extends QuarkusTask {
         if (compileCp != null) {
             compileCp.getIncoming().getDependencies().forEach(d -> {
                 if (d instanceof ProjectDependency) {
-                    addSelfWithLocalDeps(((ProjectDependency) d).getDependencyProject(), context, visited, addedDeps, false);
+                    addSelfWithLocalDeps(((ProjectDependency) d).getDependencyProject(), builder, visited, addedDeps, false);
                 }
             });
         }
 
-        addLocalProject(project, context, addedDeps, root);
+        addLocalProject(project, builder, addedDeps, root);
     }
 
-    private void addLocalProject(Project project, DevModeContext context, Set<AppArtifactKey> addeDeps, boolean root) {
+    private void addLocalProject(Project project, GradleDevModeLauncher.Builder builder, Set<AppArtifactKey> addeDeps,
+            boolean root) {
         final AppArtifactKey key = new AppArtifactKey(project.getGroup().toString(), project.getName());
         if (addeDeps.contains(key)) {
             return;
@@ -466,9 +361,9 @@ public class QuarkusDev extends QuarkusTask {
                 project.getBuildDir().toString());
 
         if (root) {
-            context.setApplicationRoot(wsModuleInfo);
+            builder.mainModule(wsModuleInfo);
         } else {
-            context.getAdditionalModules().add(wsModuleInfo);
+            builder.dependency(wsModuleInfo);
         }
         addeDeps.add(key);
     }
@@ -501,7 +396,7 @@ public class QuarkusDev extends QuarkusTask {
         return null;
     }
 
-    private void addGradlePluginDeps(StringBuilder classPathManifest, DevModeContext context) {
+    private void addGradlePluginDeps(GradleDevModeLauncher.Builder builder) {
         boolean foundQuarkusPlugin = false;
         Project prj = getProject();
         while (prj != null && !foundQuarkusPlugin) {
@@ -515,7 +410,7 @@ public class QuarkusDev extends QuarkusTask {
                 if (quarkusPluginDependency != null) {
                     quarkusPluginDependency.getAllModuleArtifacts().stream()
                             .map(ResolvedArtifact::getFile)
-                            .forEach(f -> addToClassPaths(classPathManifest, f));
+                            .forEach(f -> addToClassPaths(builder, f));
 
                     foundQuarkusPlugin = true;
 
@@ -542,7 +437,7 @@ public class QuarkusDev extends QuarkusTask {
                     for (String cpElement : classpath.split(File.pathSeparator)) {
                         final File f = new File(cpElement);
                         if (f.exists()) {
-                            addToClassPaths(classPathManifest, f);
+                            addToClassPaths(builder, f);
                         }
                     }
                 }
@@ -552,12 +447,10 @@ public class QuarkusDev extends QuarkusTask {
         }
     }
 
-    private void addToClassPaths(StringBuilder classPathManifest, File file) {
+    private void addToClassPaths(GradleDevModeLauncher.Builder classPathManifest, File file) {
         if (filesIncludedInClasspath.add(file)) {
             getProject().getLogger().debug("Adding dependency {}", file);
-
-            final URI uri = file.toPath().toAbsolutePath().toUri();
-            classPathManifest.append(uri).append(" ");
+            classPathManifest.classpathEntry(file);
         }
     }
 }
